--- a/docs/backend-requests/making/same-origin.mdx
+++ b/docs/backend-requests/making/same-origin.mdx
@@ -17,7 +17,7 @@ fetch('/api/foo').then(res => res.json());
 
 ## useSWR hook
 
-If you are using React or Next.js and would like to use the [useSWR](https://swr.vercel.app/) hook, it’s as simple as supplying the API route with whichever fetcher function you are using. Because of the [automatic revalidation feature](https://swr.vercel.app/docs/revalidation) of SWR, you need to retrieve and set the session token in the Authorization header. Call the asynchronous `getToken` method from the `useAuth()` hook and add it as a Bearer token.
+If you are using React or Next.js and would like to use the [useSWR](https://swr.vercel.app/) hook, it’s as simple as supplying the API route with whichever fetcher function you are using. Because of the [automatic revalidation feature](https://swr.vercel.app/docs/revalidation) of SWR, you need to retrieve and set the session token in the Authorization header. Call the asynchronous `getToken` method from the [`useAuth()`](/docs/references/react/use-auth) hook and add it as a Bearer token.
 
 <CodeBlockTabs options={["index.jsx", "index.tsx"]}>
 ```jsx
@@ -26,11 +26,13 @@ import { useAuth } from '@clerk/nextjs';
 
 export default function useClerkSWR(url) {
   const { getToken } = useAuth();
+
   const fetcher = async (...args) => {
     return fetch(...args, {
       headers: { Authorization: `Bearer ${await getToken()}` }
     }).then(res => res.json());
   };
+
   return useSWR(url, fetcher);
 }
 ```
@@ -41,11 +43,13 @@ import { useAuth } from '@clerk/nextjs';
 
 export default function useClerkSWR(url: string) {
   const { getToken } = useAuth();
+
   const fetcher = async (...args: [RequestInfo]) => {
     return fetch(...args, {
       headers: { Authorization: `Bearer ${await getToken()}` }
     }).then(res => res.json());
   };
+
   return useSWR(url, fetcher);
 }
 ```
@@ -55,10 +59,14 @@ When you re-focus a page or switch between tabs, SWR automatically revalidates d
 
 ## Tanstack Query (FKA React Query)
 
-If you are using [Tanstack Query](https://tanstack.com/query/latest), formally known as React Query, in your application, you need to use a query function that throws errors. Since the native Fetch API does not, you can add it in. Also, make sure that you have your application wrapped in `<QueryClientProvider />` with a `QueryClient` set.
+If you are using [Tanstack Query](https://tanstack.com/query/latest), formally known as React Query, in your application, you need to use a query function that throws errors. Since the native Fetch API does not, you can add it in.
+
+<Callout type="warning">
+  Make sure that you have your application wrapped in `<QueryClientProvider />` with a `QueryClient` set.
+</Callout>
 
 ```jsx
-import { useQuery } from 'react-query';
+import { useQuery } from '@tanstack/react-query';
 
 const { data, error } = useQuery('foo', async () => {
   const res = await fetch('/api/foo');
