migrate page from sanity to mdx

--- a/docs/references/react/use-auth.mdx
+++ b/docs/references/react/use-auth.mdx
@@ -1,15 +1,11 @@
 ---
 title: useAuth()
-description: The `useAuth` hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
+description: The useAuth hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 ---
-
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `useAuth()`
 
-The `useAuth` hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
+The `useAuth()` hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 
 ## Usage
 
@@ -87,7 +83,7 @@ The `useAuth` hook is a convenient way to access the current auth state. This ho
     {
       cells: [
         "getToken",
-        "A function that returns a promise that resolves to the current user's session token, can also be used to retrieve a custom JWT template",
+        "A function that returns a promise that resolves to the current user's session token. Can also be used to retrieve a custom JWT template.",
       ],
     },
     {
