--- a/docs/backend-requests/making/jwt-templates.mdx
+++ b/docs/backend-requests/making/jwt-templates.mdx
@@ -164,7 +164,7 @@ Interpolated shortcode substituted values will always be casted to strings. For 
 
 ## Creating a template
 
-A template consists of the following (4) properties:
+A template consists of the following four properties:
 
 - Template name: a unique identifier for the template. When generating a token, you will have to specify the template to use, using this name. This is a required field.
 - Token lifetime: the time in seconds, after which tokens generated with this template will expire. This setting determines the value of the `exp` claim (i.e. `exp=current_time+lifetime`). Default is 60 seconds.
