migrate page from sanity to mdx

--- a/docs/advanced-usage/manual-jwt.mdx
+++ b/docs/advanced-usage/manual-jwt.mdx
@@ -3,13 +3,9 @@ title: Manual JWT Verfication
 description: Learn how to manually verify Clerk-generated session tokens (JWTs).
 ---
 
-import { Callout } from "nextra-theme-docs";
-import { Images } from "@/components/Images";
-import { Steps } from 'nextra-theme-docs'
-
 # Manual JWT Verification
 
-Your Clerk-generated session tokens are essentially JWTs which are signed using your instance's private key and can be verified using your instance's public key. Depending on your architecture, these tokens will be in your backend requests either via a cookie named __session or via the Authorization header.
+Your Clerk-generated session tokens are essentially JWTs which are signed using your instance's private key and can be verified using your instance's public key. Depending on your architecture, these tokens will be in your backend requests either via a cookie named `__session` or via the Authorization header.
 
 For every request, you must validate its token to make sure it hasn't expired and it is authentic (i.e. no malicious user tried to tamper with it). If these validations pass, then it means that the user is authenticated to your application and you should consider them signed in.
 
@@ -24,8 +20,8 @@ Retrieve the session token from either `__session` cookie for a same origin requ
 There are three ways to obtain your public key:
 
 1. Using the Backend API in JSON Web Key Set (JWKS) format at the following endpoint [https://api.clerk.dev/v1/jwks](https://clerk.com/docs/reference/backend-api/tag/JWKS#operation/GetJWKS).
-2. Using the Frontend API in JSON Web Key Set (JWKS) format at the following endpoint `https://<YOUR_FRONTEND_API>/.well-known/jwks.json`. This can be obtained from the **Dashboard API Keys > Advanced > JWT Public Key**.
-3. Using the public key provided by Clerk in the dashboard under **API Keys > Advanced > JWT Public Key**.
+
+2. Using the Frontend API in JSON Web Key Set (JWKS) format at the following endpoint `https://<YOUR_FRONTEND_API>/.well-known/jwks.json`. This can be obtained from the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) section of the Clerk Dashboard. Scroll down and click on **Advanced** and in the **JWT public key** section, copy the **JWKS URL**.
 
 <Images
 src="/docs/images/advance/custom-jwt/JWT-verification-keys.png"
@@ -33,6 +29,11 @@ width={3024}
 height={1748}
 alt="Clerk Dashboard JWT verification key"
 />
+
+3. Using the PEM public key provided under the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) section of the Clerk Dashboard. Scroll down and click on **Advanced** and in the **JWT public key** section, copy the **PEM public key**.
+
+
+
 
 ### Verify the token signature
 
