Style adjustments / introduced newly desgined card

--- a/docs/references/community.mdx
+++ b/docs/references/community.mdx
@@ -7,25 +7,25 @@ description: Explore SDKs created by the Clerk community.
 
 Explore SDKs created by the Clerk community.
 
-<div className="container mx-auto my-4">
-  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-    <Cards 
+<div className="grid grid-cols-1 sm:grid-cols-2 gap-6 auto-rows-fr">
+    <SDKCard 
       title="Vue" 
       description="Add secure, beautiful, and fast authentication and user management to Vue with Clerk."
       link="https://vue-clerk.vercel.app/"
-      cta="Learn more"
+      logo='/docs/images/logos/vue.svg'
     />
-    <Cards 
+    <SDKCard
       title="Rust" 
       description="Take your Rust application to the next level by integrating Clerk's authentication and user management capabilities."
       link="https://github.com/cincinnati-ventures/clerk-rs"
-      cta="Learn more"
+      logo='/docs/images/logos/rust.svg'
+
     />
-    <Cards 
-      title="Elysia" 
+    <SDKCard
+      title="Elysia"
       description="Enhance your Elysia.js application with Clerk's authentication and user management."
       link="https://github.com/wobsoriano/elysia-clerk"
-      cta="Learn more"
+      logo='/docs/images/logos/elysia.svg'
     />
-  </div>
+
 </div>
