--- a/docs/backend-requests/handling/manual-jwt.mdx
+++ b/docs/backend-requests/handling/manual-jwt.mdx
@@ -17,7 +17,7 @@ Retrieve the session token from either `__session` cookie for a same origin requ
 
 ### Get your instance's Public Key
 
-There are three ways to obtain your public key:
+There are two ways to obtain your public key:
 
 1. Using the Backend API in JSON Web Key Set (JWKS) format at the following endpoint [https://api.clerk.dev/v1/jwks](https://clerk.com/docs/reference/backend-api/tag/JWKS#operation/GetJWKS).
 
@@ -29,10 +29,6 @@ width={3024}
 height={1748}
 alt="Clerk Dashboard JWT verification key"
 />
-
-3. Using the PEM public key provided under the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) section of the Clerk Dashboard. Scroll down and click on **Advanced** and in the **JWT public key** section, copy the **PEM public key**.
-
-
 
 
 ### Verify the token signature
