--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -9,13 +9,13 @@ The `Session` object is an abstraction over an HTTP session. It models the perio
 
 The `Session` object includes methods for recording session activity and ending the session client-side. For security reasons, sessions can also expire server-side.
 
-As soon as a [User](/docs/references/javascript/user/user) signs in, Clerk creates a Session for the current [Client](/docs/references/javascript/client). Clients can have more than one sessions at any point in time, but only one of those sessions will be **active**.
+As soon as a [`User`](/docs/references/javascript/user/user) signs in, Clerk creates a `Session` for the current [`Client`](/docs/references/javascript/client). Clients can have more than one sessions at any point in time, but only one of those sessions will be **active**.
 
 In certain scenarios, a session might be replaced by another one. This is often the case with [mutli-session applications](/docs/custom-flows/multi-session-applications).
 
 All sessions that are **expired**, **removed**, **replaced**, **ended** or **abandoned** are not considered valid.
 
-> For more details regarding the different session states, see our documentation on [Session management](/docs/advanced-usage/manual-jwt).
+> For more details regarding the different session states, see our documentation on [session management](/docs/authentication/configuration/session-options).
 
 
 ## Properties
