address code review comments

--- a/docs/backend-requests/making/cross-origin.mdx
+++ b/docs/backend-requests/making/cross-origin.mdx
@@ -5,7 +5,7 @@ description: Learn about various ways to make cross-origin requests to the backe
 
 # Cross-origin requests
 
-If your client and server are on different origins (e.g. making an API call to a server on `api.foo.com` from JavaScript running on a client at `foo.com`), the [session token]() needs to be passed in a network request header. There are a few different ways this can be done on the front-end.
+If your client and server are on different origins (e.g. making an API call to a server on `api.foo.com` from JavaScript running on a client at `foo.com`), the [session token](/docs/backend-requests/resources/session-tokens) needs to be passed in a network request header. There are a few different ways this can be done on the front-end.
 
 ## Using Fetch with React
 
@@ -48,9 +48,9 @@ export default function useClerkSWR(url) {
 }
 ```
 
-## Tanstack Query (FKA React Query)
+## Tanstack Query (React Query)
 
-If you are using [Tanstack Query](https://tanstack.com/query/latest), formally known as React Query, it will follow a similar pattern composing the `useSession` hook.
+If you are using [Tanstack Query](/query/v4/docs/react/overview), you need to use a query function that throws errors. Since the native Fetch API does not, you can add it in.
 
 <Callout type="warning">
   Make sure that you have your application wrapped in `<QueryClientProvider />` with a `QueryClient` set.
