--- a/docs/backend-requests/handling/manual-jwt.mdx
+++ b/docs/backend-requests/handling/manual-jwt.mdx
@@ -30,6 +30,7 @@ height={1748}
 alt="Clerk Dashboard JWT verification key"
 />
 
+3. Using the PEM public key provided in the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) section of the Clerk Dashboard. Scroll down and click on **Advanced** and in the **JWT public key** section, copy the **PEM public key**. This option should only be used as a fallback for when the first two options are not available.
 
 ### Verify the token signature
 
