--- a/docs/backend-requests/making/cross-origin.mdx
+++ b/docs/backend-requests/making/cross-origin.mdx
@@ -50,7 +50,7 @@ export default function useClerkSWR(url) {
 
 ## Tanstack Query (React Query)
 
-If you are using [Tanstack Query](/query/v4/docs/react/overview), you need to use a query function that throws errors. Since the native Fetch API does not, you can add it in.
+If you are using [Tanstack Query](https://tanstack.com/query/v4/docs/react/overview), you need to use a query function that throws errors. Since the native Fetch API does not, you can add it in.
 
 <Callout type="warning">
   Make sure that you have your application wrapped in `<QueryClientProvider />` with a `QueryClient` set.
