fix broken link

--- a/docs/backend-requests/making/jwt-templates.mdx
+++ b/docs/backend-requests/making/jwt-templates.mdx
@@ -104,7 +104,7 @@ The available shortcodes are the following:
 | `{{org.public_metadata}}` | The user's active organization for the current session. To retrieve specific attributes, see [Metadata](#metadata). | `object` | `{}` |
 | `{{org_membership.public_metadata}}` | The user's active organization membership for the current session. To retrieve specific attributes, see [Metadata](#metadata). | `object` | `{}` |
 
-If you need something that is missing from this list, please do not hesitate to [contact us](support@clerk.dev).
+If you need something that is missing from this list, please do not hesitate to [contact us](https://clerk.com/support).
 
 ### Metadata
 
