--- a/docs/backend-requests/overview.mdx
+++ b/docs/backend-requests/overview.mdx
@@ -31,7 +31,7 @@ For cross-origin requests, refer to our guide on [making cross-origin requests](
 
 ## Backend requests
 
-Clerk provides various middleware packages to set the session property for easy access and can also require a session to be available. Choose the guide based on the language or framework you're using:
+Clerk provides various middleware packages to set the session property for easy access. These packages can also require a session to be available on the current request. Choose the guide based on the language or framework you're using:
 
 - [Next.js](/docs/references/nextjs/auth-middleware)
 - [Gatsby](/docs/backend-requests/handling/gatsby)
