--- a/docs/backend-requests/overview.mdx
+++ b/docs/backend-requests/overview.mdx
@@ -5,7 +5,7 @@ description: Learn about various ways to make authenticated requests to the back
 
 # Request authentication
 
-A request is considered “authenticated” when the backend can securely identify which user and which device is making the request. The reasons for making authenticated requests to the backend include:
+A request is considered “authenticated” when the backend can securely identify the user and device that is making the request. The reasons for making authenticated requests to the backend include:
 
 - Associating the user with the action being performed
 - Ensuring the user has permission to make the request
