--- a/docs/backend-requests/overview.mdx
+++ b/docs/backend-requests/overview.mdx
@@ -11,7 +11,7 @@ A request is considered “authenticated” when the backend can securely identi
 - Ensuring the user has permission to make the request
 - Keeping an audit log of which device the user is performing actions from
 
-In order to authenticate the user on the backend using the Clerk SDK, the short-lived [session token](/docs/backend-requests/resources/session-tokens) needs to be passed to the server.
+In order to authenticate the user on the backend using Clerk's SDK, the short-lived [session token](/docs/backend-requests/resources/session-tokens) needs to be passed to the server.
 
 ## Frontend requests
 
