--- a/docs/backend-requests/making/same-origin.mdx
+++ b/docs/backend-requests/making/same-origin.mdx
@@ -57,7 +57,7 @@ export default function useClerkSWR(url: string) {
 
 When you re-focus a page or switch between tabs, SWR automatically revalidates data. This can be useful to immediately synchronize to the latest state in scenarios like stale mobile tabs, or laptops that went to sleep.
 
-## Tanstack Query (FKA React Query)
+## Tanstack Query (React Query)
 
 If you are using [Tanstack Query](https://tanstack.com/query/latest), formally known as React Query, in your application, you need to use a query function that throws errors. Since the native Fetch API does not, you can add it in.
 
