--- a/docs/backend-requests/making/same-origin.mdx
+++ b/docs/backend-requests/making/same-origin.mdx
@@ -59,7 +59,7 @@ When you re-focus a page or switch between tabs, SWR automatically revalidates d
 
 ## Tanstack Query (React Query)
 
-If you are using [Tanstack Query](https://tanstack.com/query/latest), formally known as React Query, in your application, you need to use a query function that throws errors. Since the native Fetch API does not, you can add it in.
+If you are using [Tanstack Query](https://tanstack.com/query/v4/docs/react/overview), formally known as React Query, in your application, you need to use a query function that throws errors. Since the native Fetch API does not, you can add it in.
 
 <Callout type="warning">
   Make sure that you have your application wrapped in `<QueryClientProvider />` with a `QueryClient` set.
