--- a/docs/backend-requests/making/same-origin.mdx
+++ b/docs/backend-requests/making/same-origin.mdx
@@ -79,7 +79,7 @@ const { data, error } = useQuery('foo', async () => {
 
 ## Background Fetching
 
-For applications that are fetching content in the background, when a tab is no longer focused, you will need to include an Authorization header along with your request.
+For applications that are fetching content in the background, like when a tab is no longer focused, you will need to include an Authorization header along with your request.
 
 ```jsx
 import { useAuth } from '@clerk/nextjs';
