apply code review suggestions

--- a/docs/backend-requests/making/cross-origin.mdx
+++ b/docs/backend-requests/making/cross-origin.mdx
@@ -1,6 +1,6 @@
 ---
 title: Cross-origin requests
-description: Learn about various ways to make cross-origin requests to the backend using the Clerk SDK.
+description: Learn about various ways to make cross-origin requests to the backend when using Clerk SDKs.
 ---
 
 # Cross-origin requests
