--- a/docs/backend-requests/making/same-origin.mdx
+++ b/docs/backend-requests/making/same-origin.mdx
@@ -1,6 +1,6 @@
 ---
 title: Same-origin requests
-description: Learn about various ways to make same-origin requests to the backend using the Clerk SDK.
+description: Learn about various ways to make same-origin requests to the backend when using Clerk SDKs.
 ---
 
 # Same-origin requests
