--- a/docs/backend-requests/overview.mdx
+++ b/docs/backend-requests/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: Request authentication
-description: Learn about various ways to make authenticated requests to the backend using Clerk's SDK.
+description: Learn about various ways to make authenticated requests to the backend when using Clerk SDKs.
 ---
 
 # Request authentication
