--- a/docs/custom-flows/overview.mdx
+++ b/docs/custom-flows/overview.mdx
@@ -40,11 +40,11 @@ Some fields, such as `email_address` and `phone_number`, must be verified before
 
 ## Sign-in flow
 
-Sign-in's are initiated by creating a [`SignIn`](/docs/references/javascript/sign-in/sign-in) object on the current Client. The `SignIn` handles all the state and logic associated with a sign-in. If the sign-in is successfully authenticated, it will transform into an active session on the current [`Client`](/docs/references/javascript/client).
+Sign-in's are initiated by creating a [`SignIn`](/docs/references/javascript/sign-in/sign-in) object on the current [`Client`](/docs/references/javascript/client). The [`SignIn`](/docs/references/javascript/sign-in/sign-in) handles all the state and logic associated with a sign-in. If the sign-in is successfully authenticated, it will transform into an active session on the current [`Client`](/docs/references/javascript/client).
 
 ### Completing a sign-in
 
-There are 3 main steps a user must perform in order to complete a sign-in:
+There are 3 main steps a user must perform in order to complete a sign-in.
 
 <Steps>
 
