Corrected type 'string' to boolean in UserButton props

--- a/docs/references/javascript/clerk/user-button.mdx
+++ b/docs/references/javascript/clerk/user-button.mdx
@@ -143,7 +143,7 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `appearance` | `object` | Controls the overall look and feel. |
-| `showName` | `string` | Controls if the user name is displayed next to the user image button. |
+| `showName` | `boolean` | Controls if the user name is displayed next to the user image button. |
 | `signInUrl` | `string` | The full URL or path to navigate to when the **Add another account** button is clicked. |
 | `userProfileMode` | `"modal" \| "navigation"` | Controls whether clicking the **Manage your account** button will cause the `<UserProfile />` component to open as a modal, or if the browser will navigate to the `userProfileUrl` where `<UserProfile />` is mounted as a page. |
 | `userProfileUrl` | `string` | The full URL or path leading to the user management interface. |
