--- a/docs/references/react/use-organization-list.mdx
+++ b/docs/references/react/use-organization-list.mdx
@@ -57,7 +57,7 @@ export default JoinedOrganizationList;
 ```
 
 ```tsx copy filename="joined-organizations.tsx"
-import { useOrganizationList } from "@clerk/nextjs";
+import { useOrganizationList } from "@clerk/clerk-react";
 import React from "react";
 
 const JoinedOrganizationList = () => {
